Resolvendo problemas de compatibilidade do Jest com o Vite

--- a/.babelrc
+++ b/.babelrc
@@ -4,5 +4,5 @@
     "@babel/preset-react",
     "@babel/preset-typescript"
   ],
-  "plugins": []
+  "plugins": ["babel-plugin-transform-import-meta"]
 }
